[package]
name = "detone"
description = "Decompose Vietnamese tone marks"
version = "1.0.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/detone/"
homepage = "https://docs.rs/detone/"
repository = "https://github.com/hsivonen/detone"
keywords = ["unicode", "vietnamese"]
categories = ["text-processing", "internationalization"]

[dev-dependencies]
unic-normal = "0.9.0"

